# lr35902-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  alu.c  alu.h  instruction_decoder.c  instruction_decoder.h  registers.c  registers.h
test/: CMakeLists.txt  test_alu.cpp  test_instruction_decoder.cpp  test_registers.cpp
